--- a/src/Component/Dashboard/style.css
+++ b/src/Component/Dashboard/style.css
@@ -13,13 +13,13 @@
     background: linear-gradient(225deg, #6675F7 0%, #57007B 100%);
     box-shadow: 0px 7px 10px -5px rgba(253, 158, 152, 0.40);
     display: inline-flex;
-    padding: 20px 25px 20px 22px;
-    justify-content: center;
-    align-items: center;
+   
+     justify-content: center; 
+    align-items: center; 
     color: #fff;
 }
 .btnUpDev2::before {
-    content: "Assignments";
+    content: "Quiz";
     position: absolute;
     top: -25px;
     left: 25px;
@@ -29,12 +29,12 @@
     background: linear-gradient(225deg, #6675F7 0%, #57007B 100%);
     box-shadow: 0px 7px 10px -5px rgba(253, 158, 152, 0.40);
     display: inline-flex;
-    padding: 20px 25px 20px 22px;
+  
     justify-content: center;
     align-items: center;
     color: #fff;
 }
-.btnUpDev3::before {
+/* .btnUpDev3::before {
     content: "Total Lectures";
     position: absolute;
     top: -25px;
@@ -44,12 +44,11 @@
     border-radius: 12px;
     background: linear-gradient(225deg, #6675F7 0%, #57007B 100%);
     box-shadow: 0px 7px 10px -5px rgba(253, 158, 152, 0.40);
-    display: inline-flex;
+  
     padding: 20px 25px 20px 22px;
-    justify-content: center;
-    align-items: center;
+   
     color: #fff;
-}
+} */
 .my_Courses
 {
 color: #1E2D78;
