--- a/src/Component/SideNav/style.css
+++ b/src/Component/SideNav/style.css
@@ -1,6 +1,6 @@
-.bg-main{
-    /* background: #FFF; */
-/* box-shadow: 0px 12px 30px 0px rgba(80, 143, 244, 0.10); */
+.bg{
+    
+
 box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.10);
 }
 
