--- a/src/Component/Dashboard/style.css
+++ b/src/Component/Dashboard/style.css
@@ -34,7 +34,7 @@
     align-items: center;
     color: #fff;
 }
-/* .btnUpDev3::before {
+.btnUpDev3::before {
     content: "Total Lectures";
     position: absolute;
     top: -25px;
@@ -48,7 +48,7 @@
     padding: 20px 25px 20px 22px;
    
     color: #fff;
-} */
+}
 .my_Courses
 {
 color: #1E2D78;
